💄 fix graph alignment from start to end

--- a/src/components/dashboard/internet/traffic-graph.scss
+++ b/src/components/dashboard/internet/traffic-graph.scss
@@ -1,4 +1,7 @@
 .traffic-graph {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     position: relative;
     opacity: 0.4;
     overflow: hidden;
